tests/parsing/dimacs/errors/006_clause_bad_atom_1.cnf
p cnf 1 1
1 p
